--- a/MLD.LHF.PRD.Service.PlugIn/MLD.LHF.PRD.Service.PlugIn.csproj
+++ b/MLD.LHF.PRD.Service.PlugIn/MLD.LHF.PRD.Service.PlugIn.csproj
@@ -50,7 +50,8 @@
       <HintPath>..\..\..\..\Tools\K3Cloud_V8.2\WebSite\bin\Kingdee.K3.BD.ServiceHelper.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Tools\K3Cloud_V8.2\WebSite\bin\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
