--- a/MLD.LHF.Demo.Plugin/MLD.LHF.Demo.Plugin.csproj
+++ b/MLD.LHF.Demo.Plugin/MLD.LHF.Demo.Plugin.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6F928F83-58D6-4608-8F28-C0AF7CD77696}</ProjectGuid>
+    <ProjectGuid>{F91F4DD0-E463-401A-AD3A-13C3AE4490E2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MLD.LHF.PRD.PrdLabelBusinessPlugIn</RootNamespace>
-    <AssemblyName>MLD.LHF.PRD.PrdLabelBusinessPlugIn</AssemblyName>
+    <RootNamespace>MLD.LHF.Demo.Plugin</RootNamespace>
+    <AssemblyName>MLD.LHF.Demo.Plugin</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -34,8 +34,20 @@
     <Reference Include="Kingdee.BOS">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.dll</HintPath>
     </Reference>
+    <Reference Include="Kingdee.BOS.AOP">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.AOP.dll</HintPath>
+    </Reference>
     <Reference Include="Kingdee.BOS.App">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.App.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.App.Core">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.App.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.Cabinet">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.Cabinet.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.Contracts">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.Contracts.dll</HintPath>
     </Reference>
     <Reference Include="Kingdee.BOS.Core">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.Core.dll</HintPath>
@@ -49,17 +61,51 @@
     <Reference Include="Kingdee.BOS.ServiceFacade.Common">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.ServiceFacade.Common.dll</HintPath>
     </Reference>
+    <Reference Include="Kingdee.BOS.ServiceFacade.KDServiceFx">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.ServiceFacade.KDServiceFx.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.ServiceFacade.ServicesStub">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.ServiceFacade.ServicesStub.dll</HintPath>
+    </Reference>
     <Reference Include="Kingdee.BOS.ServiceHelper">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.ServiceHelper.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.Web">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.Web.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.WebApi.Client">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.WebApi.Client.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.WebApi.FormService">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.WebApi.FormService.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.WebApi.ServicesStub">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.WebApi.ServicesStub.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.K3.BD.NewCode.Extension">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.BD.NewCode.Extension.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.K3.BD.NewCode.Packager.ServicesStub">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.BD.NewCode.Packager.ServicesStub.dll</HintPath>
     </Reference>
     <Reference Include="Kingdee.K3.BD.ServiceFacde.ServiceStub">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.BD.ServiceFacde.ServiceStub.dll</HintPath>
     </Reference>
+    <Reference Include="Kingdee.K3.BD.WebAPI.ServiceStub">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.BD.WebAPI.ServiceStub.dll</HintPath>
+    </Reference>
     <Reference Include="Kingdee.K3.Core">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Kingdee.K3.MFG.SUB.App.ReportPlugIn">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.MFG.SUB.App.ReportPlugIn.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.K3.SCM.App.Stock.Report">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.SCM.App.Stock.Report.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -67,11 +113,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PrdLabelBusinessPlugIn.cs" />
+    <Compile Include="BillPlugin\DemoPOBillPlugin.cs" />
+    <Compile Include="FilterPlugin\DemoFilterPlugin.cs" />
+    <Compile Include="ListPlugin\DemoPOListPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServicePlugin\DemoPOServiceOnAddValidatorPlugin.cs" />
+    <Compile Include="ServicePlugin\DemoPOServiceOnAddPlugin.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Connected Services\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
