--- a/MLD.LHF.MFG.SUB.App.ReportIn/MLD.LHF.MFG.SUB.App.ReportIn.csproj
+++ b/MLD.LHF.MFG.SUB.App.ReportIn/MLD.LHF.MFG.SUB.App.ReportIn.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6F928F83-58D6-4608-8F28-C0AF7CD77696}</ProjectGuid>
+    <ProjectGuid>{E42FD0C1-0F41-49EA-BA65-D408C510D2E0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MLD.LHF.PRD.PrdLabelBusinessPlugIn</RootNamespace>
-    <AssemblyName>MLD.LHF.PRD.PrdLabelBusinessPlugIn</AssemblyName>
+    <RootNamespace>MLD.LHF.MFG.SUB.App.ReportIn</RootNamespace>
+    <AssemblyName>MLD.LHF.MFG.SUB.App.ReportIn</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -34,8 +34,20 @@
     <Reference Include="Kingdee.BOS">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.dll</HintPath>
     </Reference>
+    <Reference Include="Kingdee.BOS.AOP">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.AOP.dll</HintPath>
+    </Reference>
     <Reference Include="Kingdee.BOS.App">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.App.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.App.Core">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.App.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.Cabinet">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.Cabinet.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.Contracts">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.Contracts.dll</HintPath>
     </Reference>
     <Reference Include="Kingdee.BOS.Core">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.Core.dll</HintPath>
@@ -49,6 +61,12 @@
     <Reference Include="Kingdee.BOS.ServiceFacade.Common">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.ServiceFacade.Common.dll</HintPath>
     </Reference>
+    <Reference Include="Kingdee.BOS.ServiceFacade.KDServiceFx">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.ServiceFacade.KDServiceFx.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.ServiceFacade.ServicesStub">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.ServiceFacade.ServicesStub.dll</HintPath>
+    </Reference>
     <Reference Include="Kingdee.BOS.ServiceHelper">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.ServiceHelper.dll</HintPath>
     </Reference>
@@ -57,6 +75,9 @@
     </Reference>
     <Reference Include="Kingdee.K3.Core">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.K3.MFG.SUB.App.ReportPlugIn">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.MFG.SUB.App.ReportPlugIn.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -67,11 +88,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PrdLabelBusinessPlugIn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Connected Services\" />
+    <Compile Include="ReportPlugIn\ROExecute\MLDROExecuteDetailRpt.cs" />
+    <Compile Include="ReportPlugIn\ROPickMtrl\MLDROPickedDetailRpt.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
