--- a/MLD.LHF.MFG.SUB.Business.PlugIn/MLD.LHF.MFG.SUB.Business.PlugIn.csproj
+++ b/MLD.LHF.MFG.SUB.Business.PlugIn/MLD.LHF.MFG.SUB.Business.PlugIn.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6F928F83-58D6-4608-8F28-C0AF7CD77696}</ProjectGuid>
+    <ProjectGuid>{E7706B31-A6F6-4F54-8E71-259F9205F17B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MLD.LHF.PRD.PrdLabelBusinessPlugIn</RootNamespace>
-    <AssemblyName>MLD.LHF.PRD.PrdLabelBusinessPlugIn</AssemblyName>
+    <RootNamespace>MLD.LHF.MFG.SUB.Business.PlugIn</RootNamespace>
+    <AssemblyName>MLD.LHF.MFG.SUB.Business.PlugIn</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -34,8 +34,21 @@
     <Reference Include="Kingdee.BOS">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.dll</HintPath>
     </Reference>
+    <Reference Include="Kingdee.BOS.AOP">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.AOP.dll</HintPath>
+    </Reference>
     <Reference Include="Kingdee.BOS.App">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.App.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.App.Core">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.App.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.Cabinet, Version=7.0.104.1, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.Cabinet.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.Contracts">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.Contracts.dll</HintPath>
     </Reference>
     <Reference Include="Kingdee.BOS.Core">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.Core.dll</HintPath>
@@ -46,14 +59,30 @@
     <Reference Include="Kingdee.BOS.Model">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.Model.dll</HintPath>
     </Reference>
-    <Reference Include="Kingdee.BOS.ServiceFacade.Common">
+    <Reference Include="Kingdee.BOS.ServiceFacade.Common, Version=8.2.830.9, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.ServiceFacade.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.ServiceFacade.KDServiceFx">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.ServiceFacade.KDServiceFx.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.ServiceFacade.ServicesStub">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.ServiceFacade.ServicesStub.dll</HintPath>
     </Reference>
     <Reference Include="Kingdee.BOS.ServiceHelper">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.ServiceHelper.dll</HintPath>
     </Reference>
+    <Reference Include="Kingdee.BOS.WebApi.FormService">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.WebApi.FormService.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.WebApi.ServicesStub">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.WebApi.ServicesStub.dll</HintPath>
+    </Reference>
     <Reference Include="Kingdee.K3.BD.ServiceFacde.ServiceStub">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.BD.ServiceFacde.ServiceStub.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.K3.BD.WebAPI.ServiceStub">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.BD.WebAPI.ServiceStub.dll</HintPath>
     </Reference>
     <Reference Include="Kingdee.K3.Core">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.Core.dll</HintPath>
@@ -67,11 +96,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PrdLabelBusinessPlugIn.cs" />
+    <Compile Include="Bill\PPBOMFormPlugIn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
