--- a/MLD.LHF.SAL.Form.PlugIn/MLD.LHF.SAL.Form.PlugIn.csproj
+++ b/MLD.LHF.SAL.Form.PlugIn/MLD.LHF.SAL.Form.PlugIn.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6F928F83-58D6-4608-8F28-C0AF7CD77696}</ProjectGuid>
+    <ProjectGuid>{4DEF02E1-037D-446C-8E54-7AF5808618F3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MLD.LHF.PRD.PrdLabelBusinessPlugIn</RootNamespace>
-    <AssemblyName>MLD.LHF.PRD.PrdLabelBusinessPlugIn</AssemblyName>
+    <RootNamespace>MLD.LHF.SAL.Form.PlugIn</RootNamespace>
+    <AssemblyName>MLD.LHF.SAL.Form.PlugIn</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -34,26 +34,11 @@
     <Reference Include="Kingdee.BOS">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.dll</HintPath>
     </Reference>
-    <Reference Include="Kingdee.BOS.App">
-      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.App.dll</HintPath>
-    </Reference>
     <Reference Include="Kingdee.BOS.Core">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.Core.dll</HintPath>
     </Reference>
     <Reference Include="Kingdee.BOS.DataEntity">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.DataEntity.dll</HintPath>
-    </Reference>
-    <Reference Include="Kingdee.BOS.Model">
-      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.Model.dll</HintPath>
-    </Reference>
-    <Reference Include="Kingdee.BOS.ServiceFacade.Common">
-      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.ServiceFacade.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="Kingdee.BOS.ServiceHelper">
-      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.ServiceHelper.dll</HintPath>
-    </Reference>
-    <Reference Include="Kingdee.K3.BD.ServiceFacde.ServiceStub">
-      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.BD.ServiceFacde.ServiceStub.dll</HintPath>
     </Reference>
     <Reference Include="Kingdee.K3.Core">
       <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.Core.dll</HintPath>
@@ -67,11 +52,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PrdLabelBusinessPlugIn.cs" />
+    <Compile Include="BillPickInventory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
