--- a/MLD.LHF.SCM.PUR.ServicePlugin/MLD.LHF.SCM.PUR.ServicePlugin.csproj
+++ b/MLD.LHF.SCM.PUR.ServicePlugin/MLD.LHF.SCM.PUR.ServicePlugin.csproj
@@ -32,22 +32,82 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Kingdee.BOS">
-      <HintPath>..\..\..\..\Tools\K3Cloud_V8.2\WebSite\bin\Kingdee.BOS.dll</HintPath>
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.AOP">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.AOP.dll</HintPath>
     </Reference>
     <Reference Include="Kingdee.BOS.App">
-      <HintPath>..\..\..\..\Tools\K3Cloud_V8.2\WebSite\bin\Kingdee.BOS.App.dll</HintPath>
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.App.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.App.Core">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.App.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.Cabinet">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.Cabinet.dll</HintPath>
     </Reference>
     <Reference Include="Kingdee.BOS.Contracts">
-      <HintPath>..\..\..\..\Tools\K3Cloud_V8.2\WebSite\bin\Kingdee.BOS.Contracts.dll</HintPath>
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.Contracts.dll</HintPath>
     </Reference>
     <Reference Include="Kingdee.BOS.Core">
-      <HintPath>..\..\..\..\Tools\K3Cloud_V8.2\WebSite\bin\Kingdee.BOS.Core.dll</HintPath>
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.Core.dll</HintPath>
     </Reference>
     <Reference Include="Kingdee.BOS.DataEntity">
-      <HintPath>..\..\..\..\Tools\K3Cloud_V8.2\WebSite\bin\Kingdee.BOS.DataEntity.dll</HintPath>
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.DataEntity.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.Log">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.Log.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.Model">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.Model.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.ServiceFacade.Common">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.ServiceFacade.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.ServiceFacade.KDServiceFx">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.ServiceFacade.KDServiceFx.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.ServiceFacade.ServicesStub">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.ServiceFacade.ServicesStub.dll</HintPath>
     </Reference>
     <Reference Include="Kingdee.BOS.ServiceHelper">
-      <HintPath>..\..\..\..\Tools\K3Cloud_V8.2\WebSite\bin\Kingdee.BOS.ServiceHelper.dll</HintPath>
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.ServiceHelper.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.Web">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.Web.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.Web.Core">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.Web.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.BOS.WebApi.Client">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.BOS.WebApi.Client.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.K3.BD.App.Common.ServicePlugIn">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.BD.App.Common.ServicePlugIn.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.K3.BD.App.Core">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.BD.App.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.K3.BD.Business">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.BD.Business.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.K3.BD.ServiceFacde.KDServiceClient">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.BD.ServiceFacde.KDServiceClient.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.K3.BD.ServiceFacde.ServiceStub">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.BD.ServiceFacde.ServiceStub.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.K3.BD.ServiceHelper">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.BD.ServiceHelper.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.K3.BD.WebAPI.ServiceStub">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.BD.WebAPI.ServiceStub.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.K3.Core">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Kingdee.K3.MFG.App">
+      <HintPath>..\..\..\..\SDK\kd_bin\Kingdee.K3.MFG.App.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -61,6 +121,14 @@
     <Compile Include="BudgetOperaPlugin.cs" />
     <Compile Include="BudgetCheckValidatorPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\..\..\..\SDK\kd_bin\Kingdee.BOS.App.dll" />
+    <Analyzer Include="..\..\..\..\SDK\kd_bin\Kingdee.BOS.Core.dll" />
+    <Analyzer Include="..\..\..\..\SDK\kd_bin\Kingdee.BOS.DataEntity.dll" />
+    <Analyzer Include="..\..\..\..\SDK\kd_bin\Kingdee.BOS.ServiceFacade.Common.dll" />
+    <Analyzer Include="..\..\..\..\SDK\kd_bin\Kingdee.BOS.ServiceFacade.ServicesStub.dll" />
+    <Analyzer Include="..\..\..\..\SDK\kd_bin\Kingdee.K3.BD.ServiceFacde.KDServiceClient.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
